--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ img {
 <h1 style="color:forestgreen
 ; text-align:center; font-size: 60px">East Coast Park</h1>
 <p style="text-align:center"> <b>Enjoy a wide array of fun-filled activities and delicious food with your friends and family in one of Singapore’s most iconic parks!</b></p>
-<img src="East.jpg" width="1000" height="650" alt="East Coast Park" title="East Coast Park">
+<img src="east.jpg" width="1000" height="650" alt="East Coast Park" title="East Coast Park">
 <br>
 <hr>
 <h2 style="color:forestgreen; text-align:center; font-size: 30px"> <u>Introduction</u></h2>
